--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,7 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    app.cors_listener:
+        class: AppBundle\Listener\CorsListener
+        tags:
+            - {name: kernel.event_listener, event: kernel.response, method: onKernelResponse}
