--- a/src/AppBundle/Resources/config/doctrine/UserInformation.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/UserInformation.orm.yml
@@ -18,4 +18,7 @@ AppBundle\Entity\UserInformation:
             type: string
             length: '40'
             unique: true
+        imgUrl:
+            type: string
+            length: 255
     lifecycleCallbacks: {  }
