--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "cboden/ratchet": "^0.3.6"
+        "cboden/ratchet": "^0.3.6",
+        "gos/web-socket-bundle": "^1.8"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
