ajout route : add user, signin

--- a/src/AppBundle/Resources/config/doctrine/CatQuestion.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/CatQuestion.orm.yml
@@ -12,4 +12,5 @@ AppBundle\Entity\CatQuestion:
         name:
             type: string
             length: 255
+            unique: true
     lifecycleCallbacks: {  }
