--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,8 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    app_cors_listener:
+        class: AppBundle\Listener\CorsListener
+        tags:
+                - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest , priority: 100}
+                - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse, priority: -100}
