--- a/src/AppBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/User.orm.yml
@@ -33,5 +33,5 @@ AppBundle\Entity\User:
         token: 
             type: string
             length: 255
-            nullable: false
+            nullable: true
     lifecycleCallbacks: {  }
