--- a/src/AppBundle/Resources/config/doctrine/UserInformation.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/UserInformation.orm.yml
@@ -27,4 +27,5 @@ AppBundle\Entity\UserInformation:
         imgUrl:
             type: string
             length: 255
+            nullable: true
     lifecycleCallbacks: {  }
